# vectory

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  SECURITY.md  pyproject.toml
.githooks/: pre-commit
scripts/: quality.py
tests/: test_api.py  test_backends.py  test_cli.py  test_collection.py  test_manager.py  test_parsing.py  test_rag.py
vectory/: __init__.py  __main__.py
vectory/api/: schemas.py  server.py
vectory/backends/: __init__.py  base.py  chroma.py  faiss_store.py  local.py  milvus.py  qdrant.py
vectory/cli/: main.py
vectory/engine/: __init__.py  collection.py  distance.py  manager.py
vectory/parsing/: __init__.py  mineru.py  models.py  paddleocr.py  service.py
vectory/rag/: __init__.py  adaptive.py  bm25.py  chunking.py  embeddings.py  evaluators.py  fusion.py  graph.py  models.py  pipeline.py  raptor.py  rerankers.py  store.py
vectory/storage/: backend.py
vectory/ui/: index.html
