[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vectory"
version = "0.1.0"
description = "A platform for building and managing multiple vector databases"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "click>=8.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
chroma = ["chromadb>=0.5"]
faiss = ["faiss-cpu>=1.7"]
qdrant = ["qdrant-client>=1.9"]
milvus = ["pymilvus>=2.4", "milvus-lite"]
all = ["chromadb>=0.5", "faiss-cpu>=1.7", "qdrant-client>=1.9", "pymilvus>=2.4", "milvus-lite"]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pre-commit>=3.7",
]

[project.scripts]
vectory = "vectory.cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["vectory", "tests", "scripts"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
branch = true
source = ["vectory"]

[tool.coverage.report]
show_missing = true
skip_covered = true
